Successfully connecting to firebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,174 @@
+# Firebase/Google
+**/google-services.json
+**/GoogleService-Info.plist
+**/firebase_options.dart
+
+# Android
+android/local.properties
+android/key.properties
+android/key.jks
+
+# iOS
+ios/Pods/
+ios/Runner.xcworkspace/
+ios/Flutter/Flutter.framework/
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Flutter/App.framework/
+ios/Flutter/engine/
+ios/Flutter/ephemeral/
+
+# macOS
+macos/Flutter/ephemeral/
+macos/Flutter/GeneratedPluginRegistrant.swift
+
+# Windows
+windows/runner/Debug/
+windows/runner/Release/
+windows/runner/GeneratedPluginRegistrant.*
+
+# Linux
+linux/flutter/ephemeral/
+
+# Web
+web/.dart_tool/
+
+# SQLite/Database
+assets/*.db
+
+# PDF/Receipts
+assets/*.pdf
+
+# Large files
+*.zip
+*.tar.gz
+*.tar
+*.7z
+*.rar
+*.mp4
+*.mov
+*.avi
+*.mkv
+*.iso
+*.exe
+*.dll
+*.so
+*.dylib
+*.bin
+*.apk
+*.ipa
+*.obb
+*.img
+*.msi
+*.cab
+*.msm
+*.msp
+*.log
+*.tmp
+*.cache
+*.bak
+*.swp
+*.swo
+*.psd
+*.ai
+*.sketch
+*.xcf
+*.blend
+*.svgz
+*.gz
+*.tgz
+*.xz
+*.lz
+*.lzma
+*.bz2
+*.Z
+*.zipx
+*.cbr
+*.cbz
+*.mp3
+*.wav
+*.flac
+*.ogg
+*.m4a
+*.aac
+*.wma
+*.alac
+*.aiff
+*.ape
+*.pcm
+*.midi
+*.mid
+*.rmi
+*.mpg
+*.mpeg
+*.3gp
+*.3g2
+*.wmv
+*.flv
+*.f4v
+*.swf
+*.vob
+*.ts
+*.m2ts
+*.mts
+*.mxf
+*.gxf
+*.m4v
+*.webm
+*.divx
+*.xvid
+*.rm
+*.rmvb
+*.asf
+*.amr
+*.dng
+*.nef
+*.cr2
+*.arw
+*.rw2
+*.orf
+*.sr2
+*.pef
+*.raf
+*.raw
+*.rwl
+*.srw
+*.mos
+*.mef
+*.erf
+*.kdc
+*.dcr
+*.mrw
+*.3fr
+*.fff
+*.iiq
+*.eip
+*.bay
+*.braw
+*.cap
+*.iiq
+*.k25
+*.kdc
+*.mdc
+*.mos
+*.nrw
+*.obm
+*.orf
+*.pef
+*.ptx
+*.pxn
+*.r3d
+*.raf
+*.raw
+*.rwl
+*.rw2
+*.sr2
+*.srf
+*.srw
+*.x3f
+
+# Ignore files >100MB
+*.largefile
 # Miscellaneous
 *.class
 *.log
