--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: exodus_app
+name: emet
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
 
-  carousel_slider: ^4.0.0
+  carousel_slider: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,17 +40,20 @@ dependencies:
   #flutter_login: ^5.0.0
   # sms_advanced: ^1.1.0
   sqflite: ^2.3.2
-  syncfusion_flutter_pdf: ^24.2.6
-  syncfusion_flutter_pdfviewer: ^24.2.5
-  syncfusion_flutter_datagrid_export: ^24.2.5
+  syncfusion_flutter_pdf: ^31.1.20
+  syncfusion_flutter_pdfviewer: ^31.1.20
+  syncfusion_flutter_datagrid_export: ^31.1.20
   sqflite_common_ffi: ^2.3.2+1
   path_provider: ^2.1.2
   path: ^1.9.0
-  share_plus: ^7.2.2
+  share_plus: ^12.0.0
   http: ^1.2.1
-  firebase_storage: ^11.7.0
-  firebase_core: ^2.28.0
-
+  firebase_storage: ^13.0.1
+  firebase_core: ^4.1.0
+  cloud_firestore: ^6.0.1
+  firebase_auth: ^6.0.2
+  google_sign_in: any
+  win32:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,13 +73,12 @@ flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/exodus.db
+    - assets/emetdb.db
     - assets/bigezow.png
     - assets/bigezo.png
-    - assets/receipt_bg.png
+    - assets/receipt.png
     - assets/icon.png
     - assets/ic_launcher.png
     
