--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:requestLegacyExternalStorage="true"
-        android:label="exodus_app"
+        android:label="emet"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
