--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -23,7 +23,15 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "7.3.0" apply false
+
+    // Updated AGP to 8.6.0
+    id "com.android.application" version "8.6.0" apply false
+
+    // FlutterFire / Firebase
+    id "com.google.gms.google-services" version "4.4.2" apply false
+
+    // Updated Kotlin to 2.2.0 (matches latest dependencies)
+    id "org.jetbrains.kotlin.android" version "2.2.0" apply false
 }
 
 include ":app"
