--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_auth: ^6.0.2
   google_sign_in: any
   win32:
+  flutter_contacts: ^1.1.7
+  permission_handler: ^12.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
